--- a/HisLight_copy.css
+++ b/HisLight_copy.css
@@ -339,10 +339,10 @@ body::-webkit-scrollbar-thumb{
     left: 60%;
     color: whitesmoke;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 3px;
-    font-size: 150%;
+    letter-spacing: 2px;
+    font-size: 2vw;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
-    width: 35%;
+    width: 37%;
     text-align: center;
     line-height: 60px;
     z-index: 1;
@@ -1506,25 +1506,25 @@ p{
         top: 10vw;
         left: -13vw;
         font-family:Georgia, 'Times New Roman', Times, serif;
-        
     }
 
     .SubV{
         font-size: 3.5vw;
+        letter-spacing: 2px;
         top: 210vw;
         left: 10vw;
         width: 80vw;
-        line-height: 30px;
+        text-transform: uppercase;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
     #SubV{
-        font-size: 5vw;
-        top: 215vw;
+        font-size: 3.5vw;
+        letter-spacing: 2px;
+        top: 210vw;
         left: 10vw;
         width: 80vw;
-        height: 10%;
-        line-height: 30px;
+        text-transform: uppercase;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
